--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-spinners": "^0.14.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
+    "swiper": "^11.1.4",
     "yup": "^1.4.0"
   }
 }
